feat(backend): migrated to H2 database